# horizonte-cli

./: .gitignore  README.md  install.sh  pyproject.toml
src/goals_cli/: main.py
src/goals_cli/core/: ai.py  analytics.py  models.py
src/goals_cli/locales/: pt_br.py
src/horizonte/: main.py
src/horizonte/core/: ai.py  analytics.py  models.py  storage.py
tests/: test_storage.py
